syntax = "proto3";
option go_package="./;term";
package protos;


service Terminal{

  rpc NewTerminal(TerminalRequest) returns (TerminalResponse){}
  rpc CloseTerminal(TerminalRequest) returns (TerminalResponse){}
  rpc ExecCommand(TerminalRequest) returns (TerminalResponse){}

}

message TerminalRequest{
  string dstIP = 1;
  string srcIP = 2;
  uint64 shellId = 3;
  string command = 4;
  uint64 deviceId = 5;
}

message TerminalResponse{
  string dstIP = 1;
  string srcIP = 2;
  uint64 shellId = 3;
  string result = 4;
}

